web/static/css/custom.css
body, h1, h2, h3, h4, h5, h6 {
    font-family: 'Microsoft YaHei UI','Microsoft YaHei',SimSun,'Segoe UI',Tahoma,Helvetica,Sans-Serif;
}
h1 a:hover {text-decoration: none;}

.company-name {
    margin: 30px 0;
    font-family: 'Jockey One', sans-serif;
    font-size: 400%;
}
.company-name span {color: #0f0;}

.carousel {margin-top: -2px;}
.carousel .item {
    -webkit-transition: opacity 3s;
    -moz-transition: opacity 3s;
    -ms-transition: opacity 3s;
    -o-transition: opacity 3s;
    transition: opacity 3s;
}
.carousel .active.left {left:0;opacity:0;z-index:2;}
.carousel .next {left:0;opacity:1;z-index:1;}
.carousel-caption {
    background: transparent url(/static/img/transparent.png) repeat scroll 0 0;
}
.carousel-caption h2,
.carousel-caption p {
    margin: 20px;
    line-height: 1.25;
    color: #fff;
    text-shadow: 0 1px 1px rgba(0,0,0,.4);
}

#footer-box {
    margin-top: 100px;
    background: #eee;
    color: #666;
}
#footer-box .span4 {
    padding: 30px;
}

#footer {
    background: #333;
    color: #fff;
    padding: 20px;
    text-align: center;
    border-bottom: 3px solid #0f0;
}

